--- a/home.css
+++ b/home.css
@@ -31,28 +31,41 @@ header{
     height: 280px;
     width: 200px;
     margin-top: 80px;
-    display: flex;
 }
 
-.imgFirts{
-    display: flex;
+#slider{
+    width: 180px;
+    height: 240px;
+    position: relative;
+    
+}
+
+#slider img{
+    opacity: 0;
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
     margin-top: 6px;
     margin-left: 10px;
-    height: 240px;
-    width: 180px;
+    object-fit: cover;
+    transition: opacity 800ms;
+}
+
+#slider img.selected{
+    opacity: 1;
 }
 
 .divtext{
     display: flex;
-    background-color: #8d1233;
+    background-color: rgb(141, 18, 51, 0.70);
+    margin-top: -180px;
+    margin-left: 210px;
 }
 
 .text{
-    background-color: rgb(141, 18, 51, 0.70);
     display: flex;
     color:#ffffff;
     font-size: 13.3px;
-    margin-top: -180px;
-    margin-left: 210px;
     text-align: center;
 }
