--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header{
     opacity: 1;
 }
 
-.divtext{
+.divText{
     display: flex;
     background-color: rgb(141, 18, 51, 0.70);
     margin-top: -180px;
